# qazy

./: .gitignore  AGENTS.md  INSTALL_PROMPT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: bump-homebrew.yml
examples/: README.md
examples/_shared/: serve_static.py
examples/better-auth-portal/: README.md  qazy.config.json
examples/better-auth-portal/app/: dashboard.html  login.html  server.py  styles.css
examples/better-auth-portal/user-scenarios/: login.scenario.md
examples/student-portal/: README.md
examples/student-portal/app/: app.js  index.html  styles.css
examples/student-portal/user-scenarios/: login.scenario.md
examples/task-board/: README.md  qazy.config.json
examples/task-board/app/: app.js  index.html  styles.css
examples/task-board/user-scenarios/: task-flow.scenario.md
qazy/: __init__.py  __main__.py  cli.py  config.py  reporting.py  runner.py  runtimes.py  screenshot_helper.py
tests/: test_cli_functional.py  test_config.py  test_examples.py  test_live_runtimes.py  test_reporting.py  test_runner.py  test_runtimes.py
