[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qazy"
version = "0.1.0"
description = "Agent-driven browser QA runner for scenario-based acceptance tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
qazy = "qazy.cli:main"

[tool.setuptools]
packages = ["qazy"]

